--- a/client/src/footnotes.css
+++ b/client/src/footnotes.css
@@ -23,7 +23,7 @@
 }
 
 .notes {
-    padding: 10px;
+    padding: 0px 10%;
 }
 
 .note {
@@ -43,4 +43,5 @@
 
 .description {
     font-style: italic;
+    padding: 10px;
 }
