--- a/client/src/footnotes.css
+++ b/client/src/footnotes.css
@@ -9,6 +9,15 @@
     margin: 15px;
 }
 
+.createFootnote {
+    max-width: 500px;
+    margin: auto;
+}
+
+.createFootnote > * {
+    padding-bottom: 10px;
+}
+
 .header {
     display: flex;
     justify-content: space-evenly;
@@ -58,4 +67,9 @@
 .createdFootnotes {
     display: flex;
     flex-direction: column;
+}
+
+.submitFootnote {
+    display: flex;
+    justify-content: center;
 }
